[tool.poetry]
name = "notebooks"
version = "0.0.1"
description = "Demonstrational and shareable Jupyter notebooks deployed using JupyterLite on Github Pages."
authors = ["CU-DBMI"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ipywidgets = ">=8.0.0,<9"
jupyterlab = ">=3.4.7,<3.5.0"
jupyterlab-drawio = "^0.9.0"
jupyterlite = "0.1.0b14"
duckdb = "^0.6.0"
pyarrow = "^10.0.1"
vulture = "^2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
